<resources>
    <string name="app_name">My Application</string>
    <string name="back">Back</string>
    <string name="share_trail">Share Trail</string>
    <string name="settings">Settings</string>
    <string name="manage_trail">Manage Trail</string>
    <string name="register_trail">Register Trail</string>
    <string name="about">About</string>
    <string name="speed_unit">Speed Unit</string>
    <string name="coordinate_format">Coordinate Format</string>
    <string name="map_orientation">Map Orientation</string>
    <string name="map_type">Map Type</string>
    <string name="degrees">Degrees</string>
    <string name="degrees_minutes">Degrees/Minutes</string>
    <string name="km_h">km/h</string>
    <string name="m_s">m/s</string>
    <string name="none">None</string>
    <string name="north_up">North Up</string>
    <string name="satellite">Satellite</string>
    <string name="vector">Vector</string>
    <string name="course_up">Course Up</string>
    <string name="degrees_minutes_seconds">Degrees/Minutes/Seconds</string>
    <string name="credits">Credits</string>
    <string name="students">Students: Felipe Gabriel and Walter Queiroz</string>
</resources>